--- a/Module-08-Objects/01 Create a Bank Account/index.css
+++ b/Module-08-Objects/01 Create a Bank Account/index.css
@@ -16,11 +16,12 @@ body {
 
 /* Style the h1 element */
 h1 {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     background: greenyellow;
     background-clip: text;
     color: transparent;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 60px;
     text-align: center;
 
 }
