--- a/Module-04-Control Flow/03 Energy Drink Recommender/index.css
+++ b/Module-04-Control Flow/03 Energy Drink Recommender/index.css
@@ -20,8 +20,11 @@ body {
 
 /* Style the h1 element */
 h1 {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 60px;
     text-align: center;
     color: white; /* Change text color to white */
 }
+
+
