--- a/Module-04-Control Flow/04 Powered by Energy Drinks/index.css
+++ b/Module-04-Control Flow/04 Powered by Energy Drinks/index.css
@@ -47,5 +47,6 @@ h1 {
     font-size: 36px;
     text-align: center;
     padding: 0em 1em;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
