--- a/Module-05-Arrays/05 Sorting Gadgets/index.css
+++ b/Module-05-Arrays/05 Sorting Gadgets/index.css
@@ -16,12 +16,13 @@ body {
 
 /* Style the h1 element */
 h1 {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     background: linear-gradient(45deg, #FFFF00, #FFD700, #FFFF00);
     -webkit-background-clip: text;
     background-clip: text;
     color: transparent;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 40px;
     text-align: center;
 
 }
