--- a/Module-05-Arrays/06 Heroes Appear/index.css
+++ b/Module-05-Arrays/06 Heroes Appear/index.css
@@ -16,9 +16,10 @@ body {
 
 /* Style the h1 element */
 h1 {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     background: red;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 30px;
     text-align: center;
 
 }
