--- a/Module-05-Arrays/07 Asynchronous Data Display with Modules/index.css
+++ b/Module-05-Arrays/07 Asynchronous Data Display with Modules/index.css
@@ -7,6 +7,7 @@ body, p {
 }
 
 body {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     background-color: #1a1a2e; /* Dark blue background for contrast */
     color: #e1ad01; /* Yellow text to match the X-Men theme */
     display: flex;
