--- a/Module-08-Objects/02 Enhancing the bank Account Object/index.css
+++ b/Module-08-Objects/02 Enhancing the bank Account Object/index.css
@@ -7,6 +7,7 @@ body, p {
 }
 
 body {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     background-image: url('moneeey.gif');
     background-size: cover;
     background-repeat: no-repeat;
@@ -20,7 +21,7 @@ h1 {
     background-clip: text;
     color: transparent;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 40px;
     text-align: center;
 
 }
